--- a/reserveTime/core/templates/company-menus.html
+++ b/reserveTime/core/templates/company-menus.html
@@ -132,7 +132,7 @@
                             </form>
                             
                             <h3 class="full bottom-border bold pb-3 mb-5">Company Menu list</h3>
-                            <div class="row company-menu-block">
+                            <div class="row company-menu-block mb-5">
                               {% for category in menu_categories %}
                                 
                                 <div class="menu-section pl-4 pr-4 mb-4">
