--- a/reserveTime/core/templates/user-saved-restaurants.html
+++ b/reserveTime/core/templates/user-saved-restaurants.html
@@ -14,11 +14,14 @@
     <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-    <title>My Profile</title>
+    <title>Saved Restaurants</title>
     
     <style>
         .custom-container{
             background-color: transparent;
+        }
+        .star i {
+            color: #da3743;
         }
     </style>
 
@@ -60,12 +63,12 @@
                         </div>
                         <div class="row company-list">
                             {% if saved_restaurants %}
-                            {% for restaurant in saved_restaurants %}
-                                <a href="{% url 'core:company-profile' restaurant.company.pk %}" class="company-item-link">
-                                    <div class="company-item row pt-3 pb-3 mb-4 bottom-border">
+                            {% for restaurant_obj in saved_restaurants %}
+                                <a href="{% url 'core:company-profile' restaurant_obj.saved_restaurant.company.pk %}" class="company-item-link mb-4 ">
+                                    <div class="company-item row pt-3 pb-3 bottom-border">
                                         <div class="col-lg-3 company-profile-img">
-                                            {% if restaurant.company.cover_photo %}
-                                                <img src="{{restaurant.company.cover_photo.url}}" alt="">
+                                            {% if restaurant_obj.saved_restaurant.company.cover_photo %}
+                                                <img src="{{restaurant_obj.saved_restaurant.company.cover_photo.url}}" alt="">
                                             {% else %}
                                                 <img src="{% static 'images/img3.jpg' %}" alt="">
                                             {% endif %}
@@ -73,33 +76,33 @@
                                         </div>
                                         
                                         <div class="col-lg-9">
-                                            <p class="name bold mb-2 pb-2">{{restaurant.company.company_name}}</p>
-                                            <div class="review-box d-flex">
-                                                <div data-type="{{restaurant.company.company_comment.overall}}" class="stars rating-box d-flex">
+                                            <p class="name bold mb-2 pb-2">{{restaurant_obj.saved_restaurant.company.company_name}}</p>
+                                            <div class="review-box d-flex rating-box">
+                                                <div data-type="{{restaurant_obj.company_overall}}" class="stars rating-box d-flex">
                                                     <div class="star"><i class="far fa-star"></i></div>
                                                     <div class="star"><i class="far fa-star"></i></div>
                                                     <div class="star"><i class="far fa-star"></i></div>
                                                     <div class="star"><i class="far fa-star"></i></div>
                                                     <div class="star"><i class="far fa-star"></i></div>
                                                 </div>
-                                                <p class="review-text ml-2">{{restaurant.company.company_comment.all|length}} reviews</p>
+                                                <p class="review-text ml-2">{{restaurant_obj.saved_restaurant.company.company_comment.all|length}} reviews</p>
                                             </div>
                                             <div class="d-flex align-items-center mt-2 mb-2">
-                                                <p class="location">{{restaurant.company.city_location}}, {{restaurant.company.province_location}}</p>
+                                                <p class="location">{{restaurant_obj.saved_restaurant.company.city_location}}, {{restaurant_obj.saved_restaurant.company.province_location}}</p>
                                                 <span class="ml-3 booking-count">
                                                     <span>
                                                         <svg width = 20 viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M15.5,5 C15.2239,5 15,5.223846 15,5.5 L15,6.5 C15,6.77615 15.2239,7 15.5,7 L17.5858,7 L14,10.58578 L12.70711,9.29291 L12.35355,8.93933 C12.15829,8.74408 11.84171,8.74408 11.64645,8.93933 L11.29289,9.29291 L5,15.5858 L5,7 L11.5,7 C11.77614,7 12,6.77615 12,6.5 L12,5.5 C12,5.22385 11.77614,5 11.5,5 L5,5 C3.89543,5 3,5.89542 3,7 L3,17 C3,18.1046 3.89543,19 5,19 L19,19 C20.1046,19 21,18.1046 21,17 L21,14.5 C21,14.2238 20.7761,14 20.5,14 L19.5,14 C19.2239,14 19,14.2238 19,14.5 L19,17 L6.4142,17 L12,11.41422 L13.2929,12.70709 L13.6464,13.06067 C13.8417,13.25592 14.1583,13.25592 14.3536,13.06067 L14.7071,12.70709 L19,8.41422 L19,10.5 C19,10.77615 19.2239,11 19.5,11 L20.5,11 C20.7761,11 21,10.77615 21,10.5 L21,6 L21,5.5 C21,5.223846 20.7761,5 20.5,5 L20,5 L15.5,5 Z" fill="#2D333F" fill-rule="nonzero"></path></g></svg>
                                                     </span>
-                                                    <span>Booked 34 times today</span>
+                                                    <span>Booked {{restaurant_obj.reservation_count}} times today</span>
                                                 </span>
                                             </div>
-                                            <p class="description">{{restaurant.company.description|slice:":255"}}...</p>
+                                            <p class="description">{{restaurant_obj.saved_restaurant.company.description|slice:":255"}}...</p>
                                             <div class="d-flex align-items-center mt-2">
                                                 <span>TakeOut : </span>
                                                 <div class="ml-3 phone-number d-flex">
                                                     <i class="fas fa-phone-alt pr-2"></i>
-                                                    {% if restaurant.company.phone_number %}
-                                                        <p>{{restaurant.company.phone_number}}</p>
+                                                    {% if restaurant_obj.saved_restaurant.company.phone_number %}
+                                                        <p>{{restaurant_obj.saved_restaurant.company.phone_number}}</p>
                                                     {% else %}
                                                         <p>xxx xxx xx xx</p>
                                                     {% endif %}
