--- a/reserveTime/core/templates/reservations-list.html
+++ b/reserveTime/core/templates/reservations-list.html
@@ -98,7 +98,7 @@
                             <h3 class="full bottom-border text-center bold pb-3 mb-5">All Reservations to {{user.company.company_name}}</h3>
                             <div class="reservations full">
                                 <div class="name">
-                                    <h3 class="bold">Upcoming Reservations</h3>
+                                    <h3 class="bold">New Reservations</h3>
                                 </div>
                                 <div class="content">
                                     <!-- <p>No Upcoming Reservations</p> -->
@@ -107,7 +107,7 @@
                                             <div class="comment-item row">
                                                 <div class="col-12 col-sm-3 comment-author">
                                                     <div class="reserve-author-profile-img">{{reservation.user.first_name|capfirst|first}}{{reservation.user.last_name|capfirst|first}}</div>
-                                                    <div class="comment-author-username"></div>
+                                                    <div class="comment-author-username">{{reservation.user.email}}</div>
                                                     <div class="comment-author-address">{{reservation.user.first_name|capfirst}} {{reservation.user.last_name|capfirst}}</div>                           
                                                 </div>
                                                 <div class="col-12 col-sm-9 mt-2 d-flex padding">
@@ -135,7 +135,7 @@
                                                                 <p> {{reservation.total_price}} $</p>
                                                             </div>
                                                              <div class="d-flex align-items-end pb-2">
-                                                                <a href="{% url 'restaurant:reservation-detail' reservation.pk %}" class="btn btn-primary">View Detail</a>
+                                                                <a href="{% url 'restaurant:reservation-detail' reservation.pk %}" class="btn btn-outline-primary">View Detail</a>
                                                             </div>
                                                         </div> 
                                                        
@@ -145,12 +145,65 @@
                                             </div>
                                         {% endfor %}   
                                     {% else %}
-                                        <p>No Upcoming Reservations</p>
+                                        <p>No New Reservations</p>
                                     {% endif %}
                                         
                                 </div>
                             </div>
                             <div class="reservations full">
+                                <div class="name">
+                                    <h3 class="bold">Accepted Reservations</h3>
+                                </div>
+                                <div class="content">
+                                    {% if accepted_reservations %}
+                                        {% for reservation in accepted_reservations %}
+                                            <div class="comment-item row">
+                                                <div class="col-12 col-sm-3 comment-author">
+                                                    <div class="reserve-author-profile-img">{{reservation.user.first_name|capfirst|first}}{{reservation.user.last_name|capfirst|first}}</div>
+                                                    <div class="comment-author-username">{{reservation.user.email}}</div>
+                                                    <div class="comment-author-address">{{reservation.user.first_name|capfirst}} {{reservation.user.last_name|capfirst}}</div>                           
+                                                </div>
+                                                <div class="col-12 col-sm-9 mt-2 d-flex padding">
+                                                    <div class="col-12 col-lg-12 padding">
+                                                        <div class="d-flex">
+                                                            <div class="d-flex ">
+                                                                <span class="bold mr-2">Reserve Date : </span>
+                                                                <p>{{reservation.reserved_date}}</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="d-flex">
+                                                            <div class="d-flex ">
+                                                                <span class="bold mr-2">Reserve Time : </span>
+                                                                <p>{{reservation.reserved_time|time:'H:i:s'}}</p>
+                                                            </div>
+                                                        </div>
+                                                        {% get_party_size reservation.table_id as party_size %}
+                                                        <div class="d-flex">
+                                                            <span class="bold mr-2">Party Size : </span>
+                                                            <p>{{party_size}}</p>
+                                                        </div>
+                                                        <div class="d-flex justify-content-between">
+                                                            <div class="total-price-box d-flex">
+                                                                <span class="bold mr-2">Total Price : </span>
+                                                                <p> {{reservation.total_price}} $</p>
+                                                            </div>
+                                                             <div class="d-flex align-items-end pb-2">
+                                                                <a href="{% url 'restaurant:reservation-detail' reservation.pk %}" class="btn btn-outline-primary">View Detail</a>
+                                                            </div>
+                                                        </div> 
+                                                       
+                                                    </div> 
+                                                    
+                                                </div>
+                                            </div>
+                                        {% endfor %}   
+                                    {% else %}
+                                        <p>No Accepted Reservations</p>
+                                    {% endif %}
+                                        
+                                </div>
+                            </div>
+                            <div class="reservations full mb-5">
                                 <div class="name">
                                     <h3 class="bold">Past Reservations</h3>
                                 </div>
@@ -161,7 +214,7 @@
                                             <div class="comment-item row">
                                                 <div class="col-12 col-sm-3 comment-author">
                                                     <div class="reserve-author-profile-img">{{reservation.user.first_name|capfirst|first}}{{reservation.user.last_name|capfirst|first}}</div>
-                                                    <div class="comment-author-username"></div>
+                                                    <div class="comment-author-username">{{reservation.user.email}}</div>
                                                     <div class="comment-author-address">{{reservation.user.first_name|capfirst}} {{reservation.user.last_name|capfirst}}</div>                           
                                                 </div>
                                                 <div class="col-12 col-sm-9 mt-2 d-flex padding">
@@ -189,7 +242,7 @@
                                                                 <p> {{reservation.total_price}} $</p>
                                                             </div>
                                                              <div class="d-flex align-items-end pb-2">
-                                                                <a href="{% url 'restaurant:reservation-detail' reservation.pk %}" class="btn btn-primary">View Detail</a>
+                                                                <a href="{% url 'restaurant:reservation-detail' reservation.pk %}" class="btn btn-outline-primary">View Detail</a>
                                                             </div>
                                                         </div> 
                                                        
