--- a/reserveTime/core/templates/partials/header.html
+++ b/reserveTime/core/templates/partials/header.html
@@ -28,7 +28,7 @@
                                 {% endif %}
                                 <li><a href="{% url 'account:user-profile' request.user.pk %}">My Dining History</a></li>
                                 <li><a href="{% url 'core:user-saved-restaurants' request.user.pk %}">My Saved Restaurants</a></li>
-                                <li><a href="{% url 'account:logout' %}">Sign out</a></li>
+                                <li><a href="{% url 'account:logout' %}" style="color: red;">Sign out</a></li>
                             </ul>
                         </div>
                     </div>
