--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -154,7 +154,9 @@ body{
 .custom-drop-down span{
     margin: 20px 10px;
     border-bottom: 1px solid #ccc;
-    font-weight: bold;
+    font-size: 20px;
+    padding-bottom: 5px;
+    padding-left: 10px;
 }
 
 .left-border{
@@ -286,7 +288,7 @@ h3{
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.3);
+    background: radial-gradient(ellipse at center,rgba(0,0,0,.1) 0,transparent 100%) rgba(0,0,0,.2);
     display: flex;
     justify-content: center;
     align-items: center;
