--- a/reserveTime/core/templates/cuisines-list.html
+++ b/reserveTime/core/templates/cuisines-list.html
@@ -26,7 +26,7 @@
     
     {% include 'partials/header.html' %}
 
-    <main class="pt-5 mb-5">
+    <main class="pt-5 mb-5" style="min-height: 600px;">
         <div class="container main-container">
             <h1 class="company-name bold text-center"> {{cuisine}} Restaurants in Azerbaijan</h1>
             <div class="row company-list">
