--- a/reserveTime/core/templates/user-saved-restaurants.html
+++ b/reserveTime/core/templates/user-saved-restaurants.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <main class="mb-5">
+    <main class="mb-5" style="min-height: 600px;">
         <div class="container custom-container">
             <div class="inner-container">
                 <div class="row">
